2009-01-05  Stephane Delcroix  <sdelcroix@novell.com>

	* bootstrap-2.14:
	* bootstrap-generic:
	* configure.in.in: depend on glib/gio 2.18

2009-01-04  Mike Kestner  <mkestner@novell.com>

	* *: update to 2.14.  parser support for GSEALed fields. svn build
	now uses bootstrap-2.14.  integrate gio-sharp module.  

2009-01-04  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: fix incorrect null check noticed by Christian Hoff.
	[Fixes #463445]

2009-01-02  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: clarify the Mono.Cairo summary comment.

2008-12-22  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* generator/InterfaceGen.cs: track API.
	* glib/GType.cs: simplify, avoiding a static method.
	* glib/Value.cs: reuse g_type_is_a.
	[Improves fix for #448009 in r121990]

2008-12-22  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* generator/InterfaceGen.cs: use the new GLib API to detect
	instances that don't implement GInterfaces.
	* glib/GType.cs: add new API for checking if an IntPtr instance
	implements a certain GType.
	[Fixes #448009]

2008-12-20  Stephane Delcroix  <sdelcroix@novell.con>

	* glib/Timeout.cs: map AddSeconds ().

2008-12-19  Mike Kestner  <mkestner@novell.com>

	* generator/BoxedGen.cs: don't generate glue dependencies.
	* glib/*.cs: remove glibsharpglue usage except thread.c.
	* glib/glue/*.c: kill all but thread.c. need glib 2.20 to kill
	it eventually.
	* pango/Attr*.cs: kill glue usage.
	* pango/glue/*.c: kill all but generated.c. it's next.
	* gtk/TreeIter.custom: kill a dumb glibsharpglue usage.

2008-12-12  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: tagged for 2.12.7.  Bump svn version.
	* audit/base: update base apiinfo's for 2.12 stable api.

2008-12-08  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* glib/Signal.cs: Improve protection against invalid signals.

2008-12-02  Stephane Delcroix  <sdelcroix@novell.com>

	* generator/Ctor.cs:
	* generator/Method.cs: