@@ -1,3 +1,9 @@
+2009-01-05  Andrés G. Aragoneses  <aaragoneses@novell.com>
+
+	* GType.cs: convert GType.Is to a non-static function.
+	* Value.cs: track API.
+	[Last cosmetic bit from #448009]
+
 2009-01-05  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* bootstrap-2.14:
